--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -12,12 +12,22 @@
         android:id="@+id/recyclerViewUserEmailText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginBottom="10dp"
         android:textAlignment="center"
         android:textSize="16sp"
         android:textStyle="italic">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/recyclerViewDateText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:textAlignment="center"
+        android:textSize="11sp"
+        >
 
     </TextView>
 
@@ -30,14 +40,11 @@
 
     </ImageView>
 
-
     <TextView
         android:id="@+id/recyclerViewUserCommentText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_margin="28dp"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -49,10 +56,8 @@
         android:layout_width="350dp"
         android:layout_height="20dp"
         android:layout_gravity="center"
-        android:layout_margin="18dp"
+        android:layout_margin="16dp"
         app:srcCompat="@drawable/dividingline"
-
         />
-
 
 </androidx.appcompat.widget.LinearLayoutCompat>
